syntax = "proto3";

package metric;
option go_package = "./;api";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

message MetricGroup {
  string name = 1;
  repeated Metric metrics = 2;
}


message Metric {
  string name = 1;
  google.protobuf.Timestamp timestamp = 2;
  double value = 3;
}
